crates/syntax/src/snapshots/successes/syntax__tests__break_stmt@break_stmt.snap
---
source: crates/syntax/src/lib.rs
expression: "dump_parse_no_errors(Program::parse(&input))"

---
Program@0..24
  BreakStmt@0..5
    BreakKw@0..5 "break"
  Whitespace@5..6 "\n"
  ReturnStmt@6..17
    ReturnKw@6..12 "return"
    Whitespace@12..13 " "
    MultivalExpr@13..17
      Literal@13..17
        Number@13..17 "1234"
  Whitespace@17..18 "\n"
  BreakStmt@18..23
    BreakKw@18..23 "break"
  Whitespace@23..24 "\n"

=============================
Errors:
=============================
[]
