crates/syntax/src/snapshots/successes/syntax__tests__comments@comments.snap
---
source: crates/syntax/src/lib.rs
expression: "dump_parse_no_errors(Program::parse(&input))"

---
Program@0..68
  Comment@0..34 "-- these are just sim ..."
  Comment@34..51 "-- more comments\n"
  Comment@51..68 "-- more comments\n"

=============================
Errors:
=============================
[]
