crates/syntax/src/snapshots/successes/syntax__tests__dot_expr@dot_expr.snap
---
source: crates/syntax/src/lib.rs
expression: "dump_parse_no_errors(Program::parse(&input))"

---
Program@0..74
  AssignStmt@0..34
    LocalKw@0..5 "local"
    Whitespace@5..6 " "
    MultiName@6..9
      Name@6..9
        Ident@6..9 "dot"
    Whitespace@9..10 " "
    Eq@10..11 "="
    Whitespace@11..12 " "
    MultivalExpr@12..34
      DotExpr@12..34
        DotExpr@12..28
          DotExpr@12..21
            NameRef@12..15
              Ident@12..15 "tbl"
            Dot@15..16 "."
            Ident@16..21 "first"
          Dot@21..22 "."
          Ident@22..28 "second"
        Dot@28..29 "."
        Ident@29..34 "third"
  Whitespace@34..35 "\n"
  AssignStmt@35..73
    LocalKw@35..40 "local"
    Whitespace@40..41 " "
    MultiName@41..52
      Name@41..52
        Ident@41..52 "with_others"
    Whitespace@52..53 " "
    Eq@53..54 "="
    Whitespace@54..55 " "
    MultivalExpr@55..73
      CallExpr@55..73
        CallExpr@55..71
          IndexExpr@55..69
            DotExpr@55..64
              NameRef@55..58
                Ident@55..58 "tbl"
              Dot@58..59 "."
              Ident@59..64 "first"
            LBracket@64..65 "["
            Literal@65..68
              Number@65..68 "234"
            RBracket@68..69 "]"
          Arglist@69..71
            LParen@69..70 "("
            RParen@70..71 ")"
        Arglist@71..73
          LParen@71..72 "("
          RParen@72..73 ")"
  Whitespace@73..74 "\n"

