crates/syntax/src/snapshots/successes/syntax__tests__for_stmt@for_stmt.snap
---
source: crates/syntax/src/lib.rs
expression: "dump_parse_no_errors(Program::parse(&input))"

---
Program@0..0

=============================
Errors:
=============================
[]
